Updated popup forms to new layout system.

--- a/templates/macros/parts/popup-header.hbs
+++ b/templates/macros/parts/popup-header.hbs
@@ -1,9 +1,10 @@
-<div class="popup-form__header" style="{{style}}">
+{{!-- Popup Header --}}
+<div class="erps-form__header erps-form__header--large" style="{{style}}">
     <div>{{item.name}}</div>
-    <div class="popup-form__content popup-form__content--image">
+    <div class="erps-form__section">
         <img 
             src="{{item.img}}" 
-            class="popup-form__image" 
+            class="erps-form__image" 
             alt="{{item.name}}" 
         /> 
     </div>
