--- a/templates/macros/parts/popup-effects.hbs
+++ b/templates/macros/parts/popup-effects.hbs
@@ -1,29 +1,33 @@
-<popup-effects>
+{{!-- Popup Effects --}}
 {{#if mainEffect.changes.length}}
-    <div class="base-form__effects">
-    <div class="base-form__effects-title">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Effects"}}</div>
-        <div class="base-form__effects-name"><img src="{{mainEffect.img}}" class="chat-card__image--secondary" /> {{mainEffect.name}}</div>
-        {{#each mainEffect.changes}}
-            <div class="base-form__effects-row">
-            <div class="base-form__effects-row-cell base-form__effects-row-cell--first">{{keySplit this.key 2}}</div> 
-            <div class="base-form__effects-row-cell base-form__effects-row-cell--middle">
-                {{#if (eq this.mode 5)}}
-                {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.SetTo"}}
-                {{else}}
-                {{#if (eq (keySplit this.key 4) "advantage")}}
-                    {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Adv"}}
-                {{/if}}
-                {{#if (eq (keySplit this.key 4) "disadvantage")}}
-                    {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Dis"}}
-                {{/if}}
-                {{#if (eq (keySplit this.key 3) "change")}}
-                    {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Add"}}
-                {{/if}}
-                {{/if}}
-            </div>
-            <div class="base-form__effects-row-cell base-form__effects-row-cell--last">{{this.value}}</div>
-            </div>
-        {{/each}}
+  <div class="erps-form__section erps-form__section--compact">
+    <div class="erps-form__header erps-form__header--small erps-form__header--no-margin">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Effects"}}</div>
+    <div class="erps-form__description erps-form__description--compact erps-form__description--no-margin">
+      <img src="{{mainEffect.img}}" class="erps-form__image erps-form__image--small" /> {{mainEffect.name}}
     </div>
-    {{/if}}
-</popup-effects>
+    
+    <div class="erps-form__effects-list">
+      {{#each mainEffect.changes}}
+        <div class="erps-form__effects-row">
+          <span class="erps-form__effects-ability">{{keySplit this.key 2}}</span>
+          <span class="erps-form__effects-mode">
+            {{#if (eq this.mode 5)}}
+              {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.SetTo"}}
+            {{else}}
+              {{#if (eq (keySplit this.key 4) "advantage")}}
+                {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Adv"}}
+              {{/if}}
+              {{#if (eq (keySplit this.key 4) "disadvantage")}}
+                {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Dis"}}
+              {{/if}}
+              {{#if (eq (keySplit this.key 3) "change")}}
+                {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Add"}}
+              {{/if}}
+            {{/if}}
+          </span>
+          <span class="erps-form__effects-value">{{this.value}}</span>
+        </div>
+      {{/each}}
+    </div>
+  </div>
+{{/if}}
