--- a/templates/macros/popups/feature-popup.hbs
+++ b/templates/macros/popups/feature-popup.hbs
@@ -1,17 +1,21 @@
-<div class="{{cssClass}} popup-form" autocomplete="off">
-    <div class="base-form__main chat-card">
-        {{> popup-header}}
+{{!-- Feature Popup --}}
+<div class="{{cssClass}} erps-form" autocomplete="off">
+  <div class="erps-form__content">
+    {{> popup-header}}
 
-        {{#if item.system.description}}
-        <div class="popup-form__content popup-form__content--description">
-            <div class="popup-form__subheader">{{item.actor.name}}</div> 
-            {{{item.system.description}}}
+    {{#if item.system.description}}
+      <div class="erps-form__section">
+        <div class="erps-form__header">{{item.actor.name}}</div> 
+        <div class="erps-form__description">
+          {{{item.system.description}}}
         </div>
-        {{/if}}
+      </div>
+    {{/if}}
 
-        <hr />
+    <hr class="erps-form__divider" />
 
-        {{> popup-effects}}
-</div> 
-    {{> macro-footer}}
+    {{> popup-effects}}
+  </div>
+
+  {{> macro-footer}}
 </div>
