--- a/templates/macros/popups/gear-popup.hbs
+++ b/templates/macros/popups/gear-popup.hbs
@@ -1,42 +1,54 @@
-<div class="{{cssClass}} popup-form" autocomplete="off">
+{{!-- Gear Popup --}}
+<div class="{{cssClass}} erps-form" autocomplete="off">
     {{> callout-box}}
-    <div class="popup-form__main">
+    <div class="erps-form__content">
         {{> popup-header}}
         
-        <div class="popup-form__subheader">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Details"}}</div>
+        <div class="erps-form__header">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Details"}}</div>
         {{#if (or isGM item.system.equipped)}}
             {{#if item.system.description}}
-            <div class="popup-form__content popup-form__content--description">
-                <div class="popup-form__subheader">{{item.actor.name}}</div> 
-                {{{item.system.description}}}
+            <div class="erps-form__section">
+                <div class="erps-form__header erps-form__header--small">{{item.actor.name}}</div> 
+                <div class="erps-form__description">
+                    {{{item.system.description}}}
+                </div>
             </div>
             {{/if}}
 
             {{> popup-roll}}
 
-            <div class="popup-form__section">
-                <div class="popup-form__subheader">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.ItemDetails"}}</div>
-                <div class="popup-form__group">
-                    <div class="popup-form__row">
-                        <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Quantity"}}</div>
-                        <div class="popup-form__content popup-form__content--data">{{item.system.quantity}}</div>
-                        <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Cost"}}</div>
-                        <div class="popup-form__content popup-form__content--data">{{item.system.cost}}</div>
-                        <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.ClassName"}}</div>
-                        <div class="popup-form__content popup-form__content--data">{{item.system.className}}</div>
-                        <div class="popup-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Weight"}}</div>
-                        <div class="popup-form__content popup-form__content--data">{{item.system.weight}}</div>
+            <div class="erps-form__section erps-form__section--compact">
+                <div class="erps-form__header erps-form__header--small erps-form__header--no-margin">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.ItemDetails"}}</div>
+                <div class="erps-form__group erps-form__group--grid erps-form__group--grid-2 erps-form__group--compact">
+                    <div class="erps-form__group erps-form__group--compact">
+                        <label class="erps-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Quantity"}}</label>
+                        <div class="erps-form__description erps-form__description--data">{{item.system.quantity}}</div>
+                    </div>
+                    <div class="erps-form__group erps-form__group--compact">
+                        <label class="erps-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Cost"}}</label>
+                        <div class="erps-form__description erps-form__description--data">{{item.system.cost}}</div>
+                    </div>
+                    <div class="erps-form__group erps-form__group--compact">
+                        <label class="erps-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.ClassName"}}</label>
+                        <div class="erps-form__description erps-form__description--data">{{item.system.className}}</div>
+                    </div>
+                    <div class="erps-form__group erps-form__group--compact">
+                        <label class="erps-form__label">{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.Weight"}}</label>
+                        <div class="erps-form__description erps-form__description--data">{{item.system.weight}}</div>
                     </div>
                 </div>
             </div>
 
-        {{> popup-effects}}
+            {{> popup-effects}}
 
-{{else}}
-<div class="popup-form__callout popup-form__callout--warning">
-    <div><i class="fas fa-exclamation-triangle"></i>{{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.EquipFirst"}}</div>
-</div>
-{{/if}}
+        {{else}}
+            <div class="erps-callouts">
+                <div class="erps-callout erps-callout--warning">
+                    <i class="fas fa-exclamation-triangle"></i>
+                    {{localize "EVENTIDE_RP_SYSTEM.Forms.Sections.EquipFirst"}}
+                </div>
+            </div>
+        {{/if}}
     </div>
 
     {{> macro-footer}}
