--- a/src/scss/utils/_typography.scss
+++ b/src/scss/utils/_typography.scss
@@ -7,7 +7,7 @@ sans-serif;
 $underdog: 'Underdog',
 serif;
 $font-decorative: 'Protest Revolution',
-sans-serif;
+serif;
 
 %protest-revolution-regular {
   font-family: "Protest Revolution", serif;
