--- a/templates/chat/combat-power-message.hbs
+++ b/templates/chat/combat-power-message.hbs
@@ -1,19 +1,24 @@
-{{!-- Header always shows with item styling --}}
+{{!-- Combat Power Chat Card --}}
 <div class="chat-card">
-  <div class="chat-card__header" style="{{style}}">
-    <div class="chat-card__header--status chat-card__header--image">
-      <img src="{{img}}" class="chat-card__image--primary" /> 
-      <div>{{name}}</div>
-    </div>
-    <div class="chat-card__header--subheader">({{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Cost"}}: {{system.cost}})
-    {{#if className}}
-      Type: {{className}}
-    {{/if}}
-    </div>
+  <div class="chat-card__header chat-card__header--status chat-card__header--image" style="{{style}}">
+    <img src="{{img}}" class="chat-card__image--primary" /> 
+    <div>{{name}}</div>
   </div>
   
-    {{> roll-info cardClass="combat-roll" cardType="power"}}
-    {{> card-ac-check}}
+  {{!-- Cost section directly below header --}}
+  <div class="chat-card__cost-section">
+    <div class="chat-card__cost-info">
+      {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Cost"}}: {{system.cost}}
+    </div>
+    {{#if className}}
+      <div class="chat-card__type-info">
+        Type: {{className}}
+      </div>
+    {{/if}}
+  </div>
+  
+  {{> roll-info cardClass="combat-roll" cardType="power"}}
+  {{> card-ac-check}}
 
   {{#if system.description}}
     <div class="chat-card__description">
