--- a/templates/chat/parts/card-ac-check.hbs
+++ b/templates/chat/parts/card-ac-check.hbs
@@ -1,18 +1,20 @@
+{{!-- AC Check Results --}}
 {{#if acCheck}}
-<div class="chat-card__effects chat-card__effects--ac-check">
+  <div class="chat-card__effects chat-card__effects--ac-check">
     <div class="chat-card__effects--title">{{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.ACCheck"}}</div>
     {{#each targetRollData as |target|}}
-        <div class="chat-card__effects--name flexrow"> {{this.name}}:
-        {{#each this.abilities as |ability key|}}
+      <div class="chat-card__effects--name">
+        <span>{{this.name}}:</span>
+        <div>
+          {{#each this.abilities as |ability key|}}
             {{#if (gte target.compare ability.ac)}}
-            <div class="chat-card__effects--hit flex-group-center">
+              <span class="chat-card__effects--hit">{{ability.abbr}}</span>
             {{else}}
-            <div class="chat-card__effects--miss flex-group-center">
+              <span class="chat-card__effects--miss">{{ability.abbr}}</span>
             {{/if}}
-            {{ability.abbr}}
-            </div>
-        {{/each}}
+          {{/each}}
         </div>
+      </div>
     {{/each}}
-</div>
+  </div>
 {{/if}}
