--- a/templates/chat/parts/card-effects.hbs
+++ b/templates/chat/parts/card-effects.hbs
@@ -15,28 +15,30 @@
       {{#if (gt this.changes.length 0)}}
         {{#each this.changes}}
           <div class="chat-card__effects-row">
-            <div class="chat-card__effects-row-cell chat-card__effects-row-cell--first">
-              {{keySplit this.key 2}}
-            </div>
-            
-            <div class="chat-card__effects-row-cell chat-card__effects-row-cell--middle">
-              {{#if (eq this.mode 5)}}
-                {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.SetTo"}}
-              {{else}}
-                {{#if (eq (keySplit this.key 4) "advantage")}}
-                  {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Adv"}}
-                {{else if (eq (keySplit this.key 4) "disadvantage")}}
-                  {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Dis"}}
-                {{else if (eq (keySplit this.key 3) "change")}}
-                  {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Add"}}
-                {{else if (eq (keySplit this.key 3) "transform")}}
-                  {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Trns"}}
+            <div class="chat-card__effects-row-content">
+              <div class="chat-card__effects-row-cell chat-card__effects-row-cell--first">
+                {{keySplit this.key 2}}
+              </div>
+              
+              <div class="chat-card__effects-row-cell chat-card__effects-row-cell--middle">
+                {{#if (eq this.mode 5)}}
+                  {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.SetTo"}}
+                {{else}}
+                  {{#if (eq (keySplit this.key 4) "advantage")}}
+                    {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Adv"}}
+                  {{else if (eq (keySplit this.key 4) "disadvantage")}}
+                    {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Dis"}}
+                  {{else if (eq (keySplit this.key 3) "change")}}
+                    {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Add"}}
+                  {{else if (eq (keySplit this.key 3) "transform")}}
+                    {{localize "EVENTIDE_RP_SYSTEM.Messages.Sections.Trns"}}
+                  {{/if}}
                 {{/if}}
-              {{/if}}
-            </div>
-            
-            <div class="chat-card__effects-row-cell chat-card__effects-row-cell--last">
-              {{this.value}}
+              </div>
+              
+              <div class="chat-card__effects-row-cell chat-card__effects-row-cell--last">
+                {{this.value}}
+              </div>
             </div>
           </div>
         {{/each}}
