Corrected incorrect prerequisites translation string location

--- a/templates/item/prerequisites.hbs
+++ b/templates/item/prerequisites.hbs
@@ -8,6 +8,6 @@
     name="system.prerequisites"
     rows="5"
     class="erps-textarea"
-    placeholder="{{localize 'EVENTIDE_RP_SYSTEM.Item.Prerequisites.placeholder'}}"
+    placeholder="{{localize 'EVENTIDE_RP_SYSTEM.Forms.Sections.Prerequisites'}}"
   >{{system.prerequisites}}</textarea>
 </section>
